--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "lucide-svelte": "^0.515.0",
     "tailwindcss": "^4.1.8"
   }
 }
